# Text-To-SQL-Agent

./: .gitignore  README.md  app.py  final.md  queries.csv  report.md  requirements.txt  test.py
src/crewai_test/: README.md  crew.py  main.py  pyproject.toml
src/crewai_test/config/: agents.yaml  tasks.yaml
src/crewai_test/tools/: query_executer.py
src/system_prompts/: prompt1.txt
