[project]
name = "src/crewai"
version = "0.1.0"
description = "src/crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
src/crewai = "src/crewai.main:run"
run_crew = "src/crewai.main:run"
train = "src/crewai.main:train"
replay = "src/crewai.main:replay"
test = "src/crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
